--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1166,6 +1166,7 @@ section.lazy-placeholder:after {
   background: #fbfbfb;
   padding-top: 60px;
   padding-bottom: 60px;
+  background: linear-gradient(45deg, #fbfbfb, #03bfff);
 }
 .cid-s6XDW05OaH .image-block {
   margin: auto;
@@ -1198,7 +1199,7 @@ section.lazy-placeholder:after {
 .cid-s6XEIgoHgs {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #e1e1e1;
+  background-color: #01bfff;
 }
 .cid-s6XEIgoHgs .mbr-text {
   color: #232323;
@@ -1767,6 +1768,14 @@ section.lazy-placeholder:after {
   .cid-s72P7Uvdkp .inner-container {
     width: 100% !important;
   }
+}
+.cid-s74UmoOqaW {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-s74UmoOqaW .mbr-section-subtitle {
+  color: #232323;
 }
 .cid-s72LnW7l6x {
   padding-top: 0px;
