--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1162,28 +1162,6 @@ section.lazy-placeholder:after {
 .cid-s6XCBTpt5I .mbr-text {
   color: #232323;
 }
-.cid-s6XDW05OaH {
-  background: #fbfbfb;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background: linear-gradient(45deg, #fbfbfb, #03bfff);
-}
-.cid-s6XDW05OaH .image-block {
-  margin: auto;
-}
-.cid-s6XDW05OaH figcaption {
-  position: relative;
-}
-.cid-s6XDW05OaH figcaption div {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .cid-s6XDW05OaH .image-block {
-    width: 100% !important;
-  }
-}
 .cid-s6XG8qvpJZ {
   padding-top: 15px;
   padding-bottom: 15px;
@@ -1624,7 +1602,15 @@ section.lazy-placeholder:after {
 .cid-s72xHsPgyg {
   padding-top: 15px;
   padding-bottom: 0px;
-  background-color: #ffffff;
+  background-color: #fbfbfb;
+}
+.cid-s7bswEt8eh {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #fbfbfb;
+}
+.cid-s7bswEt8eh .mbr-section-subtitle {
+  color: #232323;
 }
 .cid-s72IXYYuun {
   padding-top: 15px;
