--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -92,7 +92,7 @@ body {
   border-radius: 3px;
 }
 .bg-primary {
-  background-color: #f30e0e !important;
+  background-color: #03bfff !important;
 }
 .bg-success {
   background-color: #f7ed4a !important;
@@ -108,8 +108,8 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #f30e0e !important;
-  border-color: #f30e0e !important;
+  background-color: #03bfff !important;
+  border-color: #03bfff !important;
   color: #ffffff !important;
 }
 .btn-primary:hover,
@@ -117,14 +117,14 @@ body {
 .btn-primary.focus,
 .btn-primary.active {
   color: #ffffff !important;
-  background-color: #ac0909 !important;
-  border-color: #ac0909 !important;
+  background-color: #0087b5 !important;
+  border-color: #0087b5 !important;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #ac0909 !important;
-  border-color: #ac0909 !important;
+  background-color: #0087b5 !important;
+  border-color: #0087b5 !important;
 }
 .btn-secondary,
 .btn-secondary:active {
@@ -272,22 +272,22 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background: none;
-  border-color: #940707;
-  color: #940707;
+  border-color: #00749c;
+  color: #00749c;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
   color: #ffffff;
-  background-color: #f30e0e;
-  border-color: #f30e0e;
+  background-color: #03bfff;
+  border-color: #03bfff;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #f30e0e !important;
-  border-color: #f30e0e !important;
+  background-color: #03bfff !important;
+  border-color: #03bfff !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
@@ -424,7 +424,7 @@ body {
   border-color: #ffffff;
 }
 .text-primary {
-  color: #f30e0e !important;
+  color: #03bfff !important;
 }
 .text-secondary {
   color: #ff3366 !important;
@@ -449,7 +449,7 @@ body {
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #940707 !important;
+  color: #00749c !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
@@ -507,8 +507,8 @@ a.text-black:focus {
   border-radius: 100px !important;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #f30e0e;
-  border-color: #f30e0e;
+  background-color: #03bfff;
+  border-color: #03bfff;
   color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn:focus {
@@ -519,11 +519,11 @@ a.text-black:focus {
 }
 a,
 a:hover {
-  color: #f30e0e;
+  color: #03bfff;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #fdd0d0;
+  color: #cff3ff;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -554,7 +554,7 @@ a:hover {
   font-size: 1.6rem;
 }
 blockquote {
-  border-color: #f30e0e;
+  border-color: #03bfff;
 }
 /* Forms */
 .mbr-form .btn {
@@ -610,11 +610,11 @@ blockquote {
 /* Footer */
 .mbr-footer-content li::before,
 .mbr-footer .mbr-contacts li::before {
-  background: #f30e0e;
+  background: #03bfff;
 }
 .mbr-footer-content li a:hover,
 .mbr-footer .mbr-contacts li a:hover {
-  color: #f30e0e;
+  color: #03bfff;
 }
 .footer3 input[type="email"],
 .footer4 input[type="email"] {
@@ -656,7 +656,7 @@ blockquote {
 }
 .jq-selectbox li:hover,
 .jq-selectbox li.selected {
-  background-color: #f30e0e;
+  background-color: #03bfff;
   color: #ffffff;
 }
 .jq-selectbox .jq-selectbox__trigger-arrow,
@@ -669,14 +669,14 @@ blockquote {
 .jq-selectbox:hover .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:hover:after,
 .jq-number__spin.plus:hover:after {
-  border-top-color: #f30e0e;
-  border-bottom-color: #f30e0e;
+  border-top-color: #03bfff;
+  border-bottom-color: #03bfff;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_default,
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_current,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div.xdsoft_current {
-  color: #ffffff !important;
-  background-color: #f30e0e !important;
+  color: #000000 !important;
+  background-color: #03bfff !important;
   box-shadow: none !important;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
@@ -705,7 +705,7 @@ iframe.lazy-placeholder,
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%23f30e0e' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%2303bfff' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
 }
 section.lazy-placeholder:after {
   opacity: 0.3;
@@ -1121,16 +1121,29 @@ section.lazy-placeholder:after {
 .cid-s6XphYSf7Y {
   background-image: url("../../../assets/images/1883870-1152x864.jpg");
 }
-.cid-s6Xpp12Ml2 {
-  padding-top: 30px;
-  padding-bottom: 0px;
+.cid-s81ojzrgnc {
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-s6Xpp12Ml2 .mbr-section-subtitle {
-  color: #767676;
+.cid-s81ojzrgnc .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
 }
-.cid-s6Xpp12Ml2 H2 {
+.cid-s81ojzrgnc .section-text {
+  padding: 2rem 0;
   color: #f30e0e;
+}
+.cid-s81ojzrgnc .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-s81ojzrgnc .inner-container {
+    width: 100% !important;
+  }
 }
 .cid-s6XpX3pTaA {
   padding-top: 15px;
@@ -1162,9 +1175,54 @@ section.lazy-placeholder:after {
 .cid-s6XCBTpt5I .mbr-text {
   color: #232323;
 }
-.cid-s6XG8qvpJZ {
+.cid-s81rCCo1Zj {
+  background: #fbfbfb;
   padding-top: 15px;
   padding-bottom: 15px;
+}
+.cid-s81rCCo1Zj .image-block {
+  margin: auto;
+}
+.cid-s81rCCo1Zj figcaption {
+  position: relative;
+}
+.cid-s81rCCo1Zj figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-s81rCCo1Zj .image-block {
+    width: 100% !important;
+  }
+}
+.cid-s81oaXhnPC {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-s81oaXhnPC .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-s81oaXhnPC .section-text {
+  padding: 2rem 0;
+  color: #f30e0e;
+}
+.cid-s81oaXhnPC .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-s81oaXhnPC .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-s6XG8qvpJZ {
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-s6XG8qvpJZ .mbr-section-subtitle {
@@ -1188,13 +1246,29 @@ section.lazy-placeholder:after {
 .cid-s6XEIgoHgs .mbr-text P {
   text-align: center;
 }
-.cid-s72vdRV6Pd {
+.cid-s81nWjVac1 {
   padding-top: 15px;
-  padding-bottom: 0px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-s72vdRV6Pd H2 {
+.cid-s81nWjVac1 .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-s81nWjVac1 .section-text {
+  padding: 2rem 0;
   color: #f30e0e;
+}
+.cid-s81nWjVac1 .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-s81nWjVac1 .inner-container {
+    width: 100% !important;
+  }
 }
 .cid-s72vf8l6SA {
   padding-top: 120px;
@@ -1825,7 +1899,7 @@ section.lazy-placeholder:after {
   transition: 0.2s background ease-in-out;
 }
 .cid-s6Xqs30EKy {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 0px;
   background-color: #2e2e2e;
 }
